Prevent profile image from stretching on text zoom

--- a/ExampleSite/styles.css
+++ b/ExampleSite/styles.css
@@ -258,6 +258,7 @@ p {
   width: 90%;
   max-width: 400px;
   height: auto;
+  max-height: 400px;
   margin: 0 auto;
 }
 
